[tool.poetry]
name = "backpack-backend"
version = "0.1.0"
description = ""
authors = ["Mateus Cruzatto Ramos <mateusc.ramos@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
