[tool.poetry]
name = "backpack"
version = "0.1.0"
description = ""
authors = ["Mateus Cruzatto Ramos <mateusc.ramos@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
mysql-connector-python = "^9.1.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.1"
nanoid = "^2.0.0"
pyjwt = "^2.10.0"
email-validator = "^2.2.0"
flask-cors = "^5.0.0"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
